# pqc

./: checklist.md
pqcrypto/.cargo/: config.toml
pqcrypto/pqcrypto-classicmceliece/: Cargo.toml
pqcrypto/pqcrypto-internals/: build.rs
pqhw/: README.md
pqhw/asic/: README.md
pqhw/fpga/: README.md
pqhw/hsm/: README.md
pqkat/NIST-ml-kem-fips203/KAT/: README.md
pqmobile/: Makefile  Makefile.android  Makefile.ios  README.md  build.sh  build_host.sh  test.sh  verify_mobile.sh
pqmobile/Hardware_Implementation/hls/optimized/: run_hls.tcl  set_directives.tcl
pqmobile/Hardware_Implementation/hls/pure-hls/: run_hls.tcl
pqmobile/KATs/Optimized_Implementation/hqc-192/: hqc-192_intermediates_values
pqmobile/KATs/Reference_Implementation/hqc-192/: hqc-192_intermediates_values
pqmobile/test_results/: README.md
pqno_std/: Cargo.toml  README.md
pqno_std/src/: kem.rs  lib.rs
pqnodejs/: package.json  tree.txt
pqnodejs/addimp/: falcon1024_extra.js  falcon512_extra.js  hqc128_add.js  hqc192_add.js  hqc256_add.js  slhdsa_shake_128f_simple_avx2.js  slhdsa_shake_128s_simple_avx2.js  slhdsa_shake_192f_simple_avx2.js  slhdsa_shake_192f_simple_avx2.wasm  slhdsa_shake_192s_simple_avx2.js  slhdsa_shake_256f_simple_avx2.js  slhdsa_shake_256s_simple_avx2.js
pqnodejs/clean/: mlkem1024_clean.js  mlkem512_clean.js  mlkem768_clean.js
pqnodejs/hwimp/: hqc128_hw.js  hqc192_hw.js  hqc256_hw.js
pqnodejs/m4/: mlkem512_m4.js  mlkem768_m4.js
pqnodejs/optimp/: falcon1024_opt.js  falcon512_opt.js  mlkem1024_opt.js  mlkem512_opt.js  mlkem768_opt.js  slhdsa_haraka_128f_robust.js  slhdsa_haraka_128s_robust.js  slhdsa_haraka_192s_robust.js  slhdsa_haraka_256f_robust.js  slhdsa_sha2_128f_robust.js  slhdsa_sha2_128s_robust.js  slhdsa_sha2_192f_robust.js  slhdsa_sha2_192s_robust.js  slhdsa_sha2_256f_robust.js  slhdsa_sha2_256s_robust.js  slhdsa_shake_192s_simple.js  slhdsa_shake_256f_simple.js  slhdsa_shake_256s_simple.js
pqnodejs/refimp/: falcon1024_ref.js  falcon512_ref.js  hqc128_ref.js  hqc192_ref.js  hqc256_ref.js  mldsa44_aes_r_ref.js  mldsa44_aes_ref.js  mldsa44_r_ref.js  mldsa44_ref.js  mldsa65_aes_r_ref.js  mldsa65_aes_ref.js  mldsa65_r_ref.js  mldsa65_ref.js  mldsa87_aes_r_ref.js  mldsa87_aes_ref.js  mldsa87_r_ref.js  mldsa87_ref.js  mlkem1024_ref.js  mlkem512_ref.js  mlkem768_ref.js  slhdsa_haraka_128f_simple.js  slhdsa_haraka_128s_simple.js  slhdsa_haraka_192f_robust.js  slhdsa_haraka_192f_simple.js  slhdsa_haraka_192s_simple.js  slhdsa_haraka_256f_simple.js  slhdsa_haraka_256s_robust.js  slhdsa_haraka_256s_simple.js  slhdsa_sha2_128f_simple.js  slhdsa_sha2_128s_simple.js  slhdsa_sha2_192f_simple.js  slhdsa_sha2_192s_simple.js  slhdsa_sha2_256f_simple.js  slhdsa_sha2_256s_simple.js  slhdsa_shake_128f_robust.js  slhdsa_shake_128f_simple.js  slhdsa_shake_128s_robust.js  slhdsa_shake_128s_simple.js  slhdsa_shake_192f_robust.js  slhdsa_shake_192f_simple.js  (+3 more)
pqnostd/: Cargo.toml  README.md
pqnostd/src/: error.rs  kem.rs  lib.rs  rng.rs  sign.rs
pqplatform/: README.md  build.sh  verify_platform.sh
pqplatform/ml-dsa-44/avx2/: Makefile
pqplatform/pqmobile/: Makefile.ios  test_kat.sh
pqplatform/pqmobile/test_results/: README.md
pqpython/: README.md  setup.py  test_pqpython.py
pqpython/pqpython/: __init__.py  kat.py  kem.py  sign.py
pqspatial/: README.md
pqvm/: Cargo.toml  KAT_RESULTS.md  README.md  checklist.md
pqvm/archive/: BUILD_MANIFEST.md  env-versions.txt
pqvm/benchmarks/: README.md
pqvm/evm/: precompile_spec.md
pqvm/evm/precompiles/: Cargo.toml
pqvm/move/move_bindings/: Cargo.toml  README.md
pqvm/substrate/pallet/: Cargo.toml
pqvm/substrate/pallet/src/: lib.rs
pqvm/tools/: run_benchmarks.sh  run_kats.py
pqvm/tools/mlkem_host_cli/: Cargo.toml
pqvm/tools/mlkem_host_cli/src/: main.rs
pqwasi/: Cargo.toml  README.md  build.sh  test.sh  test_basic.rs  test_hqc.rs  tree.txt  verify.sh
pqwasi/clean/: libpqcrypto.rlib  libpqcrypto_falcon.rlib  libpqcrypto_mldsa.rlib
pqwasi/pqcrypto/pqcrypto-internals/: build.rs
pqwasi/src/: main.rs
pqwasm/: tree.txt
pqwasm/avx2/: slhdsa_sha2_256f_avx2.wasm
pqwear/: README.md  build.sh  build_fixed.sh  test.sh  verify_wearable.sh
pqwear/falcon-1024/aarch64/: Makefile
pqwear/falcon-512/aarch64/: Makefile
pqwear/falcon-512/avx2/: Makefile
pqwear/pqmobile/: Makefile.android
(+124 files in other folders)
