[package]
name = "pqnostd"
version = "0.1.0"
edition = "2021"
authors = ["PQC Team"]
description = "Post-Quantum Cryptography for no_std embedded systems"
license = "MIT OR Apache-2.0"

[lib]
name = "pqnostd"
path = "src/lib.rs"

# no_std configuration
[dependencies]
# PQC dependencies
pqcrypto-mlkem = { path = "../pqcrypto/pqcrypto-mlkem", default-features = false }
pqcrypto-mldsa = { path = "../pqcrypto/pqcrypto-mldsa", default-features = false }
pqcrypto-hqc = { path = "../pqcrypto/pqcrypto-hqc", default-features = false }
pqcrypto-falcon = { path = "../pqcrypto/pqcrypto-falcon", default-features = false }
pqcrypto-traits = { path = "../pqcrypto/pqcrypto-traits", default-features = false }

# Cryptographic primitives (no_std compatible)
aes = { version = "0.8", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
sha3 = { version = "0.10", optional = true, default-features = false }
digest = { version = "0.10", default-features = false }

# Random number generation
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", optional = true, default-features = false }
rand = { version = "0.8", optional = true }

# For testing (std only)
[dev-dependencies]
rand = "0.8"

[features]
default = []

# Hardware acceleration features
hw-accel = ["aes", "sha2"]
arm-cryptocell = []

# Memory constraint profiles
ultra-constrained = []  # < 2KB RAM, < 10KB flash
standard-embedded = []  # < 8KB RAM, < 50KB flash
high-end-embedded = ["hw-accel"]  # < 32KB RAM, < 200KB flash

# Target-specific optimizations
cortex-m0 = ["ultra-constrained"]
cortex-m3 = ["standard-embedded"]
cortex-m4 = ["standard-embedded", "hw-accel"]
cortex-m7 = ["high-end-embedded"]
cortex-m33 = ["high-end-embedded", "arm-cryptocell"]
esp32 = ["high-end-embedded"]
esp8266 = ["standard-embedded"]
riscv = ["standard-embedded"]

# Testing features (require std)
test = ["dep:rand", "rand_chacha"]

[profile.release]
opt-level = "s"  # Optimize for size
debug = false
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"

# Target-specific profiles
[profile.release.cortex-m0]
inherits = "release"
opt-level = "z"  # Optimize aggressively for size

[profile.release.esp8266]
inherits = "release"
opt-level = "s"
