[package]
name = "pqc_pallet"
version = "0.1.0"
edition = "2021"
authors = ["Augment Agent <dev>"]
license = "MIT OR Apache-2.0"
description = "FRAME pallet exposing PQC host-call interface (scaffold)"

[lib]
name = "pqc_pallet"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# PQC dependencies
pqcrypto-mlkem = { path = "../../../pqcrypto/pqcrypto-mlkem", default-features = false }
pqcrypto-mldsa = { path = "../../../pqcrypto/pqcrypto-mldsa", default-features = false }
pqcrypto-hqc = { path = "../../../pqcrypto/pqcrypto-hqc", default-features = false }
pqcrypto-falcon = { path = "../../../pqcrypto/pqcrypto-falcon", default-features = false }
pqcrypto-traits = { path = "../../../pqcrypto/pqcrypto-traits", default-features = false }

[features]
default = ["std"]
std = [
    "pqcrypto-mlkem/std",
    "pqcrypto-mldsa/std",
    "pqcrypto-hqc/std",
    "pqcrypto-falcon/std",
    "pqcrypto-traits/std",
]

