[package]
name = "mlkem_host_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Use existing repo crates via relative paths
pqcrypto-mlkem = { path = "../../../pqcrypto/pqcrypto-mlkem", package = "pqcrypto-mlkem", default-features = false }
pqcrypto-traits = { path = "../../../pqcrypto/pqcrypto-traits", package = "pqcrypto-traits" }

